--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         </div>
     </div>
     <script src="/assets/lib/layui/layui.all.js"></script>
+
     <script>
         //JavaScript代码区域
         layui.use('element', function() {
@@ -89,6 +90,8 @@
 
         });
     </script>
+    <script src="/assets/lib/jquery.js"></script>
+    <script src="/assets/js/index.js"></script>
 </body>
 
 </html>
