--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href=""><i class="layui-icon layui-icon-logout"></i>退出</a>
+                    <a href="javascript:;" id="logout"><i class="layui-icon layui-icon-logout"></i>退出</a>
                 </li>
             </ul>
         </div>
