--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <img src="http://t.cn/RCzsdCq" class="layui-nav-img"> 个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
+                        <dd><a href="/user/userinfo.html" target="ifm">基本资料</a></dd>
                         <dd><a href="">更换头像</a></dd>
                         <dd><a href="/user/repwd.html" target="ifm">重置密码</a></dd>
                     </dl>
@@ -67,7 +67,8 @@
                     <li class="layui-nav-item ">
                         <a href="javascript:;"><i class="layui-icon layui-icon-username"></i>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
+                            <dd><a href="/user/userinfo.html" target="ifm"><i
+                                        class="layui-icon layui-icon-app"></i>基本资料</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
                             <dd><a href="/user/repwd.html" target="ifm"><i
                                         class="layui-icon layui-icon-app"></i>重置密码</a></dd>
