--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </a>
                     <dl class="layui-nav-child">
                         <dd><a href="/user/userinfo.html" target="ifm">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
+                        <dd><a href="/user/avatar.html" target="ifm">更换头像</a></dd>
                         <dd><a href="/user/repwd.html" target="ifm">重置密码</a></dd>
                     </dl>
                 </li>
@@ -69,7 +69,8 @@
                         <dl class="layui-nav-child">
                             <dd><a href="/user/userinfo.html" target="ifm"><i
                                         class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                            <dd><a href="/user/avatar.html" target="ifm"><i
+                                        class="layui-icon layui-icon-app"></i>更换头像</a></dd>
                             <dd><a href="/user/repwd.html" target="ifm"><i
                                         class="layui-icon layui-icon-app"></i>重置密码</a></dd>
                         </dl>
