--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                     <li class="layui-nav-item lay-shrink">
                         <a class="" href="javascript:;"><i class="layui-icon layui-icon-tabs"></i>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="/test.html" target="ifm"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
+                            <dd><a href="/article/category.html" target="ifm"><i
+                                        class="layui-icon layui-icon-app"></i>文章类别</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
                         </dl>
