--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                                         class="layui-icon layui-icon-app"></i>文章类别</a></dd>
                             <dd><a href="/article/article.html" target="ifm"><i
                                         class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
+                            <dd><a href="/article/publish.html" target="ifm"><i
+                                        class="layui-icon layui-icon-app"></i>发表文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item ">
